# build_llama2_from_scratch_torch

./: README.md  main.py  pyproject.toml
notebooks/: Lesson0-Setup_and_Data_Prep.ipynb  Lesson1-Introduction_to_LM_and_Transformers.ipynb  Lesson2-Tokenization_and_Embedding.ipynb  Lesson3-Attention_Mechanism.ipynb  Lesson4-Multi-Head_Attention_and_Transformer_Block.ipynb  Lesson5-Building_the_Language_Model.ipynb  attention_flow
notebooks/data/: data.csv
notebooks/temp/: custom_tokenizer.json  train.txt
