[project]
name = "minillama2-tutorial"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "flask>=3.1.0",
    "ipykernel>=6.29.5",
    "matplotlib>=3.10.0",
    "numpy>=2.2.3",
    "pandas>=2.2.3",
    "seaborn>=0.13.2",
    "tokenizers>=0.21.0",
    "torch>=2.6.0",
    "transformers>=4.49.0",
]
